# WhatsApp-job-finder

./: .env  .gitignore  LICENSE  README.md  mode_registry.py  multi-turn_assistant.py  pyproject.toml  requirements.txt  wa_cli.py
backend/: ingest.py  multi-turn_assistant.py  rag_ingest.py  retrieve.py  retrieve_and_generate.py  upload_file.py
backend/data/employment/: GoodWill_Career_Center.txt  GoodWill_Workshops.txt  boston_public_library_career_help.txt  boston_reemployment_center.txt  masshire_career_centers.txt  training_opportunities_program.txt  unemployment_services_ma.txt
backend/data/immigration/: USCIS FORMS.txt
examples/: location_bus_app.py  media_app.py  reaction_reply_app.py  simple_app.py
sdk/: README.md
sdk/wa_service_sdk/: __init__.py  core.py  errors.py  fastapi_adapter.py  media.py  models.py  responses.py
tests/: test_interactive_parsing.py  test_media_handling.py  test_responses.py
wa_service_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
